@startuml

skinparam linetype ortho

enum Role {
  USER
  READER
  ADMIN
}

enum Status {
  WAITING
  INPROGRESS
  COMPLETED
  PENDING
}

entity Profile {
  * userId: Int
  name: String?
  detail: String?
  picture: String?
  belongs: String?
  * user: User
}

entity User {
  * id: Int
  * email: String
  * password: String
  * nickname: String
  * role: Role
  Profile: Profile?
  * UserTaskGroup: UserTaskGroup[]
}

entity Task {
  * id: Int
  * title: String
  * progress: Int
  * estimateTime: String
  * status: Status
  * createdAt: DateTime
  * updatedAt: DateTime
  * completedAt: DateTime
  * taskGroup: TaskGroup
  * groupId: Int
  taskDetail: TaskDetail?
}

entity TaskDetail {
  * taskId: Int
  * content: String
  * resultTime: String
  stepCount: Int?
  codeReviewPoints: Int?
  * task: Task
}

entity TaskGroup {
  * id: Int
  * name: String
  summary: String?
  * UserTaskGroup: UserTaskGroup[]
  * Task: Task[]
}

entity UserTaskGroup {
  * taskGroupId: Int
  * userId: Int
  * taskGroup: TaskGroup
  * user: User
}

Profile |o..|| User
Profile |o..|| User
Task ||..|| Status
Task ||..o| TaskDetail
Task }|..|| TaskGroup
User ||..|{ UserTaskGroup
User ||..|| Role
Task ||..|| Status

@enduml
